UCS: Enhance box locking (GSI-2417) (#195)
* UCS: Add 'force' parameter to lock boxes and cancel unfinished uploads

* Fix bugs with upload completion and box locking when files are cancelled or failed

* Flip state check sequence in complete_file_upload

* Remove 'inbox_upload_completed' because it is no longer used

* Add HttpIncompleteUploadsError exception

* Bump major versions because of API change

* Refactor lock_file_upload_box
