# services/ucs/tests_ucs/unit/test_api.py
@@ -420,9 +420,17 @@ async def test_create_box_endpoint_error_handling(
             UploadControllerPort.BoxVersionError(box_id=TEST_BOX_ID),
             http_exceptions.HttpBoxVersionError(box_id=TEST_BOX_ID),
         ),
+        (
+            UploadControllerPort.IncompleteUploadsError(
+                box_id=TEST_BOX_ID, file_ids=[(TEST_FILE_ID, "test_file")]
+            ),
+            http_exceptions.HttpIncompleteUploadsError(
+                box_id=TEST_BOX_ID, file_ids=[(TEST_FILE_ID, "test_file")]
+            ),
+        ),
         (RuntimeError("Random error"), http_exceptions.HttpInternalError()),
     ],
-    ids=["BoxNotFound", "BoxVersionOutdated", "InternalError"],
+    ids=["BoxNotFound", "BoxVersionOutdated", "IncompleteUploads", "InternalError"],
 )
 async def test_update_box_endpoint_error_handling(
     config: ConfigFixture,
@@ -720,6 +728,12 @@ async def test_get_file_part_upload_url_endpoint_error_handling(
             UploadControllerPort.UploadSizeMismatchError(file_id=TEST_FILE_ID),
             http_exceptions.HttpUploadSizeMismatchError(file_id=TEST_FILE_ID),
         ),
+        (
+            UploadControllerPort.FileUploadStateError(
+                file_id=TEST_FILE_ID, details="cancelled"
+            ),
+            http_exceptions.HttpFileUploadStateError(file_id=TEST_FILE_ID),
+        ),
         (RuntimeError("Random error"), http_exceptions.HttpInternalError()),
     ],
     ids=[
@@ -728,6 +742,7 @@ async def test_get_file_part_upload_url_endpoint_error_handling(
         "FileUploadNotFound",
         "UploadCompletionError",
         "UploadSizeMismatchError",
+        "FileUploadStateError",
         "InternalError",
     ],
 )
